@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: revtool,v 1.61 2001/03/26 09:48:54 mej Exp $
+# $Id: revtool,v 1.62 2001/04/02 07:53:39 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -812,7 +812,7 @@ BEGIN {
 
     Getopt::Long::Configure("no_getopt_compat", "bundling", "no_ignore_case");
     Getopt::Long::GetOptions(@valid_opts);
-    $debug = $opt_d;
+    &debug_set($opt_d);
     $protocol = ($opt_P ? $opt_P : $defproto);
     if (!grep($protocol eq $_, ("cvs", "bk"))) {
         eprint "Invalid protocol \"$protocol\".  Using default protocol $defproto.\n";
@@ -884,7 +884,7 @@ BEGIN {
     }
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.61 $ created on $Date: 2001/03/26 09:48:54 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.62 $ created on $Date: 2001/04/02 07:53:39 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
